# BioPARR

./: .gitignore  AAA_Configure.bat  AAA_Configure.py  CITATION.cff  LICENSE  NOTICE  README.md
CaseID/: AAA_AnalyseCase.bat  AAA_AnalyseCase.py  AAA_DeleteResults.bat  AAA_DeleteResults.py
Software/Scripts/: AAA_CreateConstThicknessVolumes.bat  AAA_CreateConstThicknessVolumes.py  AAA_CreateVarThicknessVolumes.bat  AAA_CreateVarThicknessVolumes.py  AAA_Extract_surfaces.bat  AAA_Extract_surfaces.py  AAA_Mesh.bat  AAA_Mesh.py  AAA_Mesh_Volumes.bat  AAA_Mesh_Volumes.py  AAA_convert_PLY_to_STL.py  AAA_convert_STL.py  AAA_convert_VTP.py  AnalyseAbaqus.bat  AnalyseAbaqus.py  AnalyseAllCases.bat  AnalyseAllCases.py  ComputeRPI.bat  ComputeRPI.py  ExtractResults.py  ExtractStresses.bat  ExtractWall.bat  ExtractWall.py  Mesh_surf.geo  Mesh_wall.geo  RegisterMRI2CT.bat  RegisterMRI2CT.py  abaqus_v6.env
Software/Scripts/Abaqus/ILTPressure/: AAA.inp
Software/Scripts/Abaqus/NoILT/: AAA.inp
Software/Scripts/Abaqus/WallPressure/: AAA.inp
Software/Scripts/CaseTemplate/5_Mesh_Const_Thickness/Thickness/: M.acsv
Software/SlicerModules/: Copyright_VTK.txt
Software/SlicerModules/AAA_AverageStress/: CMakeLists.txt
Software/SlicerModules/AAA_AverageStress/AAA_AverageStress/: AAA_AverageStress.cxx  AAA_AverageStress.xml  CMakeCache.txt  CMakeLists.txt
Software/SlicerModules/AAA_ComputeRPI/: CMakeLists.txt
Software/SlicerModules/AAA_ComputeRPI/AAA_ComputeRPI/: AAA_ComputeRPI.cxx  AAA_ComputeRPI.xml  AAA_defines.h  CMakeLists.txt
Software/SlicerModules/AAA_CreateWall/: CMakeLists.txt
Software/SlicerModules/AAA_CreateWall/AAA_CreateWall/: AAA_CreateWall.cxx  AAA_CreateWall.xml  AAA_defines.h  CMakeLists.txt  tinydir.h
Software/SlicerModules/AAA_ExtractSurfaces/: CMakeLists.txt
Software/SlicerModules/AAA_ExtractSurfaces/AAA_ExtractSurfaces/: AAA_ExtractSurfaces.cxx  AAA_ExtractSurfaces.xml  AAA_defines.h  CMakeLists.txt
Software/SlicerModules/AAA_GenerateAbaqusFile/: CMakeLists.txt
Software/SlicerModules/AAA_GenerateAbaqusFile/AAA_GenerateAbaqusFile/: AAA_GenerateAbaqusFile.cxx  AAA_GenerateAbaqusFile.xml  CMakeLists.txt
Software/acvd1.1/: Readme.txt  link_sources.txt
Software/gmsh/: CREDITS.txt  README.txt  gmsh_sources.zip.REMOVED.git-id  info.txt
docs/: index.md
